[fix] fixed settings panel inputs overlapping

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,18 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/* Remove arrows in number input boxes */
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type=number] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
+
 @layer base {
   :root {
         --background: 0 0% 100%;
